# docs/swagger.yaml
@@ -370,6 +370,11 @@ paths:
         in: query
         name: status
         type: string
+      - description: order creator
+        format: text
+        in: query
+        name: login
+        type: string
       produces:
       - application/json
       responses:
